--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -1,51 +1,51 @@
 name: Test
 
-on:
+on: 
   workflow_run:
     workflows: ["Train"]
-    types: [completed]
+    types:
+      - completed
 
 env:
-  IMAGE_NAME: ci-cd-assignment
+  IMAGE_NAME: ai-mlops-assignment
   REGISTRY: docker.io
-  VERSION: 1.1
-
+  VERSION: 1.0
 
 jobs:
-  pull-run-and-test:
+  test:
+    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set variables
-        run: |
-          VER=$(cat version.py)
-          echo "VERSION=$VER" >> $GITHUB_ENV
+      - name: Check Train Workflow Conclusion
+        id: check_train_conclusion
+        uses: actions/github-script@v5
+        with:
+          script: |
+            const conclusion = '${{ github.event.workflow_run.conclusion }}';
+            console.log(`Train workflow conclusion: ${conclusion}`);
+            return conclusion;
 
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+      - name: Testing this step
+        run: echo "The Login is success!!!"
+
       - name: Pull Docker image
-        run: docker pull $REGISTRY/${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME:$VERSION
+        run: docker pull ${REGISTRY}/${{ secrets.DOCKER_USERNAME }}/${IMAGE_NAME}:${VERSION}
 
-      - name: Run Docker container
-        run: docker run --name $IMAGE_NAME -d ${{ secrets.DOCKER_USERNAME }}/${IMAGE_NAME}:${VERSION}
+      - name: Testing this step
+        run: echo "The pull is success!!!"
 
-      - name: Wait for container to finish
-        run: docker wait $IMAGE_NAME
-
-      - name: Get and Check test score
+      - name: Pull and Run the Docker Image 
         run: |
-          SCORE=$(docker logs $IMAGE_NAME| tail -n 1)
-          if (( $(echo "$SCORE > 0.40" | bc -l) )); then
-            echo "Test passed. Score is greater than 0.40"
-            exit 0
+          score=$(docker run --rm  ${REGISTRY}/${{ secrets.DOCKER_USERNAME }}/${IMAGE_NAME}:${VERSION})
+          if (( $(echo "$score > 0.40" | bc -l) )); then
+            echo "Test passed"
           else
-            echo "Test failed. Score is not greater than 0.40"
+            echo "Test failed"
             exit 1
           fi
-        shell: bash
-        env:
-          INPUT_SCORE: ${{ steps.get-test-score.outputs.score }}
