--- a/.github/workflows/Train.yaml
+++ b/.github/workflows/Train.yaml
@@ -2,35 +2,29 @@ name: Train
 
 on:
   pull_request:
-    branches:
-      - main
-    types: [opened, synchronize, reopened]
+    branches: 
+      - '*'
 
 env:
-  IMAGE_NAME: ci-cd-assignment
+  IMAGE_NAME: ai-mlops-assignment
   REGISTRY: docker.io
+  VERSION: 1.0
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set variables
-        run: |
-          VER=$(cat version.py)
-          echo "VERSION=$VER" >> $GITHUB_ENV
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Build Docker image
-        run: docker build -t ${IMAGE_NAME} .
-
-      - name: Tag Docker image
-        run: docker tag $IMAGE_NAME ${REGISTRY}/${{ secrets.DOCKER_USERNAME }}/${IMAGE_NAME}:${VERSION}
-
-      - name: Push Docker image
-        run: docker push ${REGISTRY}/${{ secrets.DOCKER_USERNAME }}/${IMAGE_NAME}:${VERSION}
+    - name: Build and Push Docker Image
+      run: |
+        docker build -t ${IMAGE_NAME} .
+        docker tag ${IMAGE_NAME} ${REGISTRY}/${{ secrets.DOCKER_USERNAME }}/${IMAGE_NAME}:${VERSION}
+        docker push ${REGISTRY}/${{ secrets.DOCKER_USERNAME }}/${IMAGE_NAME}:${VERSION}
